--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.65"
+async-trait = "0.1.57"
 clap = { version = "4.0.15", features = ["derive"] }
+tokio = { version = "1.21.2", features = ["full"] }
