--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ edition = "2021"
 anyhow = "1.0.65"
 async-trait = "0.1.57"
 clap = { version = "4.0.15", features = ["derive"] }
+colored = "2.0.0"
 regex = "1.6.0"
 tokio = { version = "1.21.2", features = ["full"] }
